fix line wrap

--- a/src/at/andiwand/odf2html/translator/style/default.css
+++ b/src/at/andiwand/odf2html/translator/style/default.css
@@ -14,3 +14,7 @@ span {
 	white-space: pre;
 	word-wrap: break-word;
 }
+
+table {
+	border-collapse: collapse;
+}
