--- a/src/at/andiwand/odf2html/translator/style/spreadsheet-default.css
+++ b/src/at/andiwand/odf2html/translator/style/spreadsheet-default.css
@@ -1,7 +1,3 @@
-table {
-	border-collapse: collapse;
-}
-
 td {
 	border: 1px solid #cccccc;
 }
